Prevent scrollbars to appear

--- a/src/zenboard/ZenBoard.css
+++ b/src/zenboard/ZenBoard.css
@@ -3,6 +3,7 @@ body {
   color: #fff;
   font-family: 'Roboto', sans-serif;
   margin: 0;
+  overflow: hidden;
   height: 100vh;
   width: 100vw;
 }
